# anki-flashcards-creator

./: .env.example  .gitignore  English vocabulary.xlsx  README.md  __init__.py  __main__.py  anki_note_gen.py  constants.py  manifest.json  meta.json  pyproject.toml  requirements.txt  test.txt  utils.py
anki_flashcards_creator/: __init__.py  anki_note_gen.py  anki_note_gen_dialog.py  anki_note_gen_dialog_struct.py  constants.py  utils.py
anki_flashcards_creator/dialog/: __init__.py  anki_note_creator_ui.py  anki_note_creator_ui.ui  anki_note_gen_dialog.py
anki_flashcards_creator/examples/: English vocabulary.xlsx
anki_flashcards_creator/modules/: __init__.py
anki_flashcards_creator/modules/anki_client/: anki_client.py
anki_flashcards_creator/modules/browser_scrapper/: diki_client.py
anki_flashcards_creator/modules/data_reader/: excel_extractor.py
dialog/: anki_note_creator_ui.py  anki_note_creator_ui.ui  anki_note_dock_selection_ui.ui  anki_note_gen_dialog.py  anki_note_settings_ui.ui
modules/: __init__.py
modules/anki_client/: anki_client.py  anki_validator.py
modules/browser_scrapper/: diki_client.py
modules/data_reader/: excel_extractor.py
src/: __init__.py  anki_note_gen.py  constants.py  utils.py
src/examples/: espanol_vocabulorio.xlsx
src/modules/: __init__.py
src/modules/anki_client/: anki_client.py
src/modules/data_reader/: excel_extractor.py
tests/: README.md  monkeytype.sqlite3  requirements.txt
