[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Anki-notes-creator"
version = "0.2.0"
description = "UV-based launcher for Anki."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "anki-release",
  "python-dotenv==1.1.1",
  "polars",
  "fastexcel[polars,pyarrow]",
  "uv",
  "diki_translate",
  "beautifulsoup4", 
  "requests",
  "asyncio",
  "psutil",
  "MonkeyType==23.3.0",
  "mypy"
]
